[gd_scene load_steps=7 format=3 uid="uid://dvkucbs2fvrom"]

[ext_resource type="Script" uid="uid://hoopku5o2mo" path="res://scripts/dialogue_scene_new.gd" id="1_65go0"]
[ext_resource type="FontFile" uid="uid://cqp0jt4hja0sx" path="res://assets/fonts/STHeiti Medium.ttc" id="2_65go0"]
[ext_resource type="Theme" uid="uid://skacphy0ms5v" path="res://theme.tres" id="3_65go0"]

[sub_resource type="Theme" id="Theme_c4h3t"]
default_font = ExtResource("2_65go0")
default_font_size = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_at7bl"]
bg_color = Color(0.827507, 0.67698, 0.561395, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.262649, 0.184925, 0.121458, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65go0"]
bg_color = Color(0.251898, 0.206264, 0.142086, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.186799, 0.0848087, 0.0508112, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="root" type="CanvasLayer"]
script = ExtResource("1_65go0")

[node name="UIRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_c4h3t")

[node name="Background" type="TextureRect" parent="UIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="CharacterSprite" type="TextureRect" parent="UIRoot"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -273.0
offset_top = -920.0
offset_right = 274.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 0
expand_mode = 1
stretch_mode = 5

[node name="DialoguePanel" type="Panel" parent="UIRoot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -246.0
offset_right = -32.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_at7bl")

[node name="CharacterName" type="Label" parent="UIRoot/DialoguePanel"]
layout_mode = 1
offset_left = 19.0
offset_top = -36.0
offset_right = 279.0
offset_bottom = 28.0
theme = ExtResource("3_65go0")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_65go0")
text = "dssdssds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueText" type="RichTextLabel" parent="UIRoot/DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 44.0
offset_right = -40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.262745, 0.184314, 0.121569, 1)
theme_override_font_sizes/normal_font_size = 35
text = "dssdsds"

[node name="ChoicePanel" type="Panel" parent="UIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_65go0")

[node name="ChoiceContainer" type="VBoxContainer" parent="UIRoot/ChoicePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -124.0
offset_right = 300.0
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="UIRoot"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -29.0
offset_right = 74.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_65go0")
text = "重新開始"
